--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
  <body>  
   <section id="wrap">  
    <header>  
-    <h1>JS Piano</h1>  
-    <h2>Use your keyboard. Hover for hints.</h2>  
+    <h1>Piano</h1>  
+    <h2>Use seu teclado. Passe o mouse para dicas.</h2>  
    </header>  
    <section id="main">  
     <div class="nowplaying"></div>  
@@ -65,7 +65,7 @@
        <span class="hints">P</span>  
      </div>  
      <div data-key="186" class="key" data-note="E">  
-       <span class="hints">;</span>  
+       <span class="hints">ç</span>  
      </div>  
     </div>  
     <audio data-key="65" src="http://carolinegabriel.com/demo/js-keyboard/sounds/040.wav"></audio>  
