--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
        <span class="hints">P</span>  
      </div>  
      <div data-key="186" class="key" data-note="E">  
-       <span class="hints">ç</span>  
+       <span class="hints">;</span>  
      </div>  
     </div>  
     <audio data-key="65" src="http://carolinegabriel.com/demo/js-keyboard/sounds/040.wav"></audio>  
